# deferred-starter

./: .gitignore  CMakeLists.txt  README.md
cmake/: root_directory.hpp.in
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
include/: camera.hpp  common.hpp  material.hpp  mesh.hpp  model.hpp  resource_loader.hpp  root_directory.hpp  shader.hpp  transform.hpp  window.hpp
resources/: cube.mtl  sphere.mtl
shaders/: phong.vert  phong_forward.frag
src/: camera.cpp  main.cpp  material.cpp  mesh.cpp  model.cpp  resource_loader.cpp  shader.cpp  transform.cpp  window.cpp
